# Harbor.ed

./: README.md
langchain/: .env.example  .gitignore  README.md  data.txt  devenv.nix  environment.yml  ingest.py  package-lock.json  pyproject.toml  rag_mongo.ipynb  setup-exports.sh  shell.nix  testing.ipynb
langchain/app/: env.py  server.py  supachain.py
langchain/chat/: .ingest.py.swp  constants.py  main.py  pyproject.toml
langchain/rag-mongo/: setup.py
langchain/rag-mongo/rag_mongo/: chain.py
server/: .gitignore  cognize.py  draw_utils.py  hello.py  requirements.txt  support.py  utils.py
server/config/: comfort.py  upper_body.yml
ui/: package-lock.json  package.json
ui/angular/: angular.json  package-lock.json  package.json
ui/angular-three/: README.md  angular.json  package-lock.json  package.json
ui/angular-three/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
ui/aqua/: README.md  package-lock.json  package.json
ui/aqua/src/: AnimationController.ts  DeltaTimer.ts  Fish.ts  index.html  index.ts  style.css  types.ts  utils.ts
ui/aqua/src/image/: License.txt
ui/cra-threejs/: package-lock.json  package.json
ui/cra-threejs/public/: index.html
ui/cra-threejs/public/models/: Blobfish.jsx  Clownfish.jsx  Koi.jsx  Lionfish.jsx  Puffer.jsx  Snapper.jsx  Swordfish.jsx
ui/cra-threejs/src/: App.css  App.js  Three.js  index.css
ui/cra-threejs/src/components/: About.js  Cards.js  Characters.js  HomePage.js  Journal.js  MyFish.js  Navbar.js  ThreeFishScene.js  cardkeycommon.js  main.js
ui/three/: index.html  index.js
(+12 files in other folders)
