[tool.poetry]
name = "langchain"
version = "0.0.0"
description = ""
authors = ["Lindor", "Rizzard", "Nathene", "Anquila" ]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
rag-mongo = {path = "packages/rag-mongo", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
